--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Repo for 2022 hactoberfest",
   "main": "index.js",
   "scripts": {
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
